test new generator

--- a/ConsoleApplication/ConsoleApplication.csproj
+++ b/ConsoleApplication/ConsoleApplication.csproj
@@ -35,5 +35,9 @@
 		<CompilerVisibleProperty Include="FieldSourceGeneratorNamespace" />
 		<CompilerVisibleProperty Include="FieldSourceGeneratorExtensionFilePattern" />
 	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Properties\" />
+	</ItemGroup>
 
 </Project>
